// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TokenRowMobile > should render with all props combined 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed cursor-pointer table-row table-row-unselected group group border-b-0! custom-test-class"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background dim:border-theme-dim-700 dim:bg-theme-background w-full cursor-pointer overflow-hidden rounded border bg-white mb-3"
          >
            <div
              class="bg-theme-secondary-100 dim:bg-theme-dim-950 flex h-10 w-full items-center justify-between pr-3 pl-4 sm:pl-3 dark:bg-black"
            >
              <div
                class="flex flex-row items-center gap-3"
              >
                <div
                  class="hidden flex-row items-center sm:flex"
                >
                  <button
                    class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none mr-2 p-1"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="text-theme-warning-400"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="star"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                  <div
                    class="relative inline-block border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 m-0 h-[17px]"
                  />
                </div>
                <div
                  class="bg-theme-primary-600 dark:bg-theme-dark-navy-600 dim:bg-theme-dim-navy-600 flex h-5 w-5 items-center justify-center overflow-hidden rounded-full text-xs font-semibold text-white"
                >
                  <div>
                    T
                  </div>
                </div>
                <span
                  class="dark:text-theme-dark-50 dim:text-theme-dim-50 text-sm leading-[17px] font-semibold"
                >
                  Test Token
                </span>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <button
                  class="relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-dark-navy-400 dark:hover:text-theme-navy-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 p-1 text-sm hover:underline"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    Send
                  </div>
                </button>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pt-3 pb-4 sm:grid sm:grid-cols-[200px_auto_180px] sm:pb-4"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TokenRow__balance"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Token Balance
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm leading-[17px] font-semibold"
                    data-testid="Amount"
                  >
                    100
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Value
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <div
                    class="text-theme-secondary-500 dark:text-theme-dark-500 dim:text-theme-dim-500 text-sm font-semibold"
                  >
                    N/A
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Contract
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span>
                    <span>
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://test.com/token1"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 hover:border-current"
                        >
                          <div
                            class="flex w-40 flex-row items-center gap-2 text-sm leading-[17px] font-semibold"
                          >
                            <span>
                              <span>
                                <span
                                  class="no-ligatures text-theme-navy-600 dark:text-theme-dark-navy-400 dim:text-theme-dim-navy-600"
                                  data-testid="TruncateMiddle"
                                >
                                  0xToken1
                                </span>
                              </span>
                            </span>
                            <div
                              class="text-theme-secondary-500 dark:text-theme-dark-500 dim:text-theme-dim-500 shrink-0 align-middle duration-200"
                              data-testid="Link__external"
                            >
                              <div
                                style="height: 12px; width: 12px;"
                              >
                                <svg
                                  id="arrow-external"
                                  style="height: 100%; width: 100%;"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <path
                                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </span>
                      </a>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-t border-dashed pt-4 sm:hidden"
              >
                <button
                  class="space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -m-1 mr-2 p-1"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <div
                      class="text-theme-warning-400"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="star"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm leading-[17px] font-semibold"
                    >
                      Favorite
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TokenRowMobile > should render with all props combined 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed cursor-pointer table-row table-row-unselected group group border-b-0! custom-test-class"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background dim:border-theme-dim-700 dim:bg-theme-background w-full cursor-pointer overflow-hidden rounded border bg-white mb-3"
          >
            <div
              class="bg-theme-secondary-100 dim:bg-theme-dim-950 flex h-10 w-full items-center justify-between pr-3 pl-4 sm:pl-3 dark:bg-black"
            >
              <div
                class="flex flex-row items-center gap-3"
              >
                <div
                  class="hidden flex-row items-center sm:flex"
                >
                  <button
                    class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none mr-2 p-1"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="text-theme-warning-400"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="star"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                  <div
                    class="relative inline-block border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 m-0 h-[17px]"
                  />
                </div>
                <div
                  class="bg-theme-primary-600 dark:bg-theme-dark-navy-600 dim:bg-theme-dim-navy-600 flex h-5 w-5 items-center justify-center overflow-hidden rounded-full text-xs font-semibold text-white"
                >
                  <div>
                    T
                  </div>
                </div>
                <span
                  class="dark:text-theme-dark-50 dim:text-theme-dim-50 text-sm leading-[17px] font-semibold"
                >
                  Test Token
                </span>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <button
                  class="relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-dark-navy-400 dark:hover:text-theme-navy-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 p-1 text-sm hover:underline"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    Send
                  </div>
                </button>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pt-3 pb-4 sm:grid sm:grid-cols-[200px_auto_180px] sm:pb-4"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TokenRow__balance"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Token Balance
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm leading-[17px] font-semibold"
                    data-testid="Amount"
                  >
                    100
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Value
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <div
                    class="text-theme-secondary-500 dark:text-theme-dark-500 dim:text-theme-dim-500 text-sm font-semibold"
                  >
                    N/A
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Contract
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span>
                    <span>
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://test.com/token1"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 hover:border-current"
                        >
                          <div
                            class="flex w-40 flex-row items-center gap-2 text-sm leading-[17px] font-semibold"
                          >
                            <span>
                              <span>
                                <span
                                  class="no-ligatures text-theme-navy-600 dark:text-theme-dark-navy-400 dim:text-theme-dim-navy-600"
                                  data-testid="TruncateMiddle"
                                >
                                  0xToken1
                                </span>
                              </span>
                            </span>
                            <div
                              class="text-theme-secondary-500 dark:text-theme-dark-500 dim:text-theme-dim-500 shrink-0 align-middle duration-200"
                              data-testid="Link__external"
                            >
                              <div
                                style="height: 12px; width: 12px;"
                              >
                                <svg
                                  id="arrow-external"
                                  style="height: 100%; width: 100%;"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <path
                                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </span>
                      </a>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-t border-dashed pt-4 sm:hidden"
              >
                <button
                  class="space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -m-1 mr-2 p-1"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <div
                      class="text-theme-warning-400"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="star"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm leading-[17px] font-semibold"
                    >
                      Favorite
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TokenRowMobile > should render with different balance 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group group border-b-0!"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background dim:border-theme-dim-700 dim:bg-theme-background w-full cursor-pointer overflow-hidden rounded border bg-white mb-3"
          >
            <div
              class="bg-theme-secondary-100 dim:bg-theme-dim-950 flex h-10 w-full items-center justify-between pr-3 pl-4 sm:pl-3 dark:bg-black"
            >
              <div
                class="flex flex-row items-center gap-3"
              >
                <div
                  class="hidden flex-row items-center sm:flex"
                >
                  <button
                    class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none mr-2 p-1"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="text-theme-warning-400"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="star"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                  <div
                    class="relative inline-block border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 m-0 h-[17px]"
                  />
                </div>
                <div
                  class="bg-theme-primary-600 dark:bg-theme-dark-navy-600 dim:bg-theme-dim-navy-600 flex h-5 w-5 items-center justify-center overflow-hidden rounded-full text-xs font-semibold text-white"
                >
                  <div>
                    T
                  </div>
                </div>
                <span
                  class="dark:text-theme-dark-50 dim:text-theme-dim-50 text-sm leading-[17px] font-semibold"
                >
                  Test Token
                </span>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <button
                  class="relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-dark-navy-400 dark:hover:text-theme-navy-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 p-1 text-sm hover:underline"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    Send
                  </div>
                </button>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pt-3 pb-4 sm:grid sm:grid-cols-[200px_auto_180px] sm:pb-4"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TokenRow__balance"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Token Balance
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm leading-[17px] font-semibold"
                    data-testid="Amount"
                  >
                    500
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Value
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <div
                    class="text-theme-secondary-500 dark:text-theme-dark-500 dim:text-theme-dim-500 text-sm font-semibold"
                  >
                    N/A
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Contract
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span>
                    <span>
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://test.com/token1"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 hover:border-current"
                        >
                          <div
                            class="flex w-40 flex-row items-center gap-2 text-sm leading-[17px] font-semibold"
                          >
                            <span>
                              <span>
                                <span
                                  class="no-ligatures text-theme-navy-600 dark:text-theme-dark-navy-400 dim:text-theme-dim-navy-600"
                                  data-testid="TruncateMiddle"
                                >
                                  0xToken1
                                </span>
                              </span>
                            </span>
                            <div
                              class="text-theme-secondary-500 dark:text-theme-dark-500 dim:text-theme-dim-500 shrink-0 align-middle duration-200"
                              data-testid="Link__external"
                            >
                              <div
                                style="height: 12px; width: 12px;"
                              >
                                <svg
                                  id="arrow-external"
                                  style="height: 100%; width: 100%;"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <path
                                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </span>
                      </a>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-t border-dashed pt-4 sm:hidden"
              >
                <button
                  class="space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -m-1 mr-2 p-1"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <div
                      class="text-theme-warning-400"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="star"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm leading-[17px] font-semibold"
                    >
                      Favorite
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TokenRowMobile > should render with different balance 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group group border-b-0!"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background dim:border-theme-dim-700 dim:bg-theme-background w-full cursor-pointer overflow-hidden rounded border bg-white mb-3"
          >
            <div
              class="bg-theme-secondary-100 dim:bg-theme-dim-950 flex h-10 w-full items-center justify-between pr-3 pl-4 sm:pl-3 dark:bg-black"
            >
              <div
                class="flex flex-row items-center gap-3"
              >
                <div
                  class="hidden flex-row items-center sm:flex"
                >
                  <button
                    class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none mr-2 p-1"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="text-theme-warning-400"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="star"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                  <div
                    class="relative inline-block border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 m-0 h-[17px]"
                  />
                </div>
                <div
                  class="bg-theme-primary-600 dark:bg-theme-dark-navy-600 dim:bg-theme-dim-navy-600 flex h-5 w-5 items-center justify-center overflow-hidden rounded-full text-xs font-semibold text-white"
                >
                  <div>
                    T
                  </div>
                </div>
                <span
                  class="dark:text-theme-dark-50 dim:text-theme-dim-50 text-sm leading-[17px] font-semibold"
                >
                  Test Token
                </span>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <button
                  class="relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-dark-navy-400 dark:hover:text-theme-navy-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 p-1 text-sm hover:underline"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    Send
                  </div>
                </button>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pt-3 pb-4 sm:grid sm:grid-cols-[200px_auto_180px] sm:pb-4"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TokenRow__balance"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Token Balance
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm leading-[17px] font-semibold"
                    data-testid="Amount"
                  >
                    500
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Value
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <div
                    class="text-theme-secondary-500 dark:text-theme-dark-500 dim:text-theme-dim-500 text-sm font-semibold"
                  >
                    N/A
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Contract
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span>
                    <span>
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://test.com/token1"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 hover:border-current"
                        >
                          <div
                            class="flex w-40 flex-row items-center gap-2 text-sm leading-[17px] font-semibold"
                          >
                            <span>
                              <span>
                                <span
                                  class="no-ligatures text-theme-navy-600 dark:text-theme-dark-navy-400 dim:text-theme-dim-navy-600"
                                  data-testid="TruncateMiddle"
                                >
                                  0xToken1
                                </span>
                              </span>
                            </span>
                            <div
                              class="text-theme-secondary-500 dark:text-theme-dark-500 dim:text-theme-dim-500 shrink-0 align-middle duration-200"
                              data-testid="Link__external"
                            >
                              <div
                                style="height: 12px; width: 12px;"
                              >
                                <svg
                                  id="arrow-external"
                                  style="height: 100%; width: 100%;"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <path
                                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </span>
                      </a>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-t border-dashed pt-4 sm:hidden"
              >
                <button
                  class="space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -m-1 mr-2 p-1"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <div
                      class="text-theme-warning-400"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="star"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm leading-[17px] font-semibold"
                    >
                      Favorite
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
